--- a/index.html
+++ b/index.html
@@ -1,1 +1,119 @@
-Hello world
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <link rel="stylesheet" href="style.css" />
+  <body>
+    <div class="top-content">
+      <div class="top__header">
+        <img src="img/Logo.png" alt="Logo" />
+        <img src="img/Button copy.png" alt="Button" />
+      </div>
+      <div class="top__info">
+        <img src="img/Rectangle 16 copy.png" alt="Rectangle" />
+        <div class="adv">
+          <span class="BRAND">THE BRAND </span>
+          <span class="LUXERIOUS">OF LUXERIOUS</span>
+          <span class="FASHION">FASHION</span>
+        </div>
+      </div>
+      <section class="center">
+        <div class="info_item">
+          <div class="adv_text1">
+            <span class="h1"> 30% OFF </span>
+            <span class="paragraph1"> FOR WOMEN </span>
+          </div>
+        </div>
+        <div class="info_item">
+          <div class="adv_text2">
+            <span class="h1"> HOT DEAL </span>
+            <span class="paragraph1"> FOR MEN </span>
+          </div>
+        </div>
+        <div class="info_item">
+          <div class="adv_text3">
+            <span class="h1"> NEW ARRIVALS </span>
+            <span class="paragraph1"> FOR KIDS </span>
+          </div>
+        </div>
+        <div class="info_item_big">
+          <div class="adv_text_big">
+            <span class="h1"> LUXIROUS & TRENDY </span>
+            <span class="paragraph1"> ACCESORIES</span>
+          </div>
+        </div>
+      </section>
+
+      <span class="h2">Fetured Items</span>
+      <span class="h3"
+        >Shop for items based on what we featured in this week</span
+      >
+      <section class="center">
+        <div class="price_info">
+          <img
+            class="fasion_image"
+            src="img/Rectangle 15 copy.png"
+            alt="photo"
+          />
+          <span class="h4">ELLERY X M'O CAPSULE</span>
+          <span class="paragraph_2">
+            Known for her sculptural takes on traditional tailoring, Australian
+            arbiter of cool Kym Ellery teams up with Moda Operandi.</span
+          >
+          <span class="price"> $52.00</span>
+        </div>
+        <div class="price_info">
+          <img class="fasion_image" src="img/Layer 51.png" alt="photo" />
+          <span class="h4">ELLERY X M'O CAPSULE</span>
+          <span class="paragraph_2">
+            Known for her sculptural takes on traditional tailoring, Australian
+            arbiter of cool Kym Ellery teams up with Moda Operandi.</span
+          >
+          <span class="price"> $52.00</span>
+        </div>
+        <div class="price_info">
+          <img class="fasion_image" src="img/fasion_photo3.png" alt="photo" />
+          <span class="h4">ELLERY X M'O CAPSULE</span>
+          <span class="paragraph_2">
+            Known for her sculptural takes on traditional tailoring, Australian
+            arbiter of cool Kym Ellery teams up with Moda Operandi.</span
+          >
+          <span class="price"> $52.00</span>
+        </div>
+        <div class="price_info">
+          <img class="fasion_image" src="img/fasion_photo4.png" alt="photo" />
+          <span class="h4">ELLERY X M'O CAPSULE</span>
+          <span class="paragraph_2">
+            Known for her sculptural takes on traditional tailoring, Australian
+            arbiter of cool Kym Ellery teams up with Moda Operandi.</span
+          >
+          <span class="price"> $52.00</span>
+        </div>
+        <div class="price_info">
+          <img class="fasion_image" src="img/fasion_photo5.png" alt="photo" />
+          <span class="h4">ELLERY X M'O CAPSULE</span>
+          <span class="paragraph_2">
+            Known for her sculptural takes on traditional tailoring, Australian
+            arbiter of cool Kym Ellery teams up with Moda Operandi.</span
+          >
+          <span class="price"> $52.00</span>
+        </div>
+        <div class="price_info">
+          <img class="fasion_image" src="img/fasion_photo6.png" alt="photo" />
+          <span class="h4">ELLERY X M'O CAPSULE</span>
+          <span class="paragraph_2">
+            Known for her sculptural takes on traditional tailoring, Australian
+            arbiter of cool Kym Ellery teams up with Moda Operandi.</span
+          >
+          <span class="price"> $52.00</span>
+        </div>
+      </section>
+
+      <div class="border"><p class="footer">Browse All Product</p></div>
+    </div>
+  </body>
+</html>
